# TinyDB

./: CMakeLists.txt  Makefile  README.md  build.sh  run-test.sh
CppStringPlus/: CMakeLists.txt  README.md  build.sh  main.xml
CppStringPlus/include/CppStringPlus/: CppStringPlus.hpp
CppStringPlus/src/: CppStringPlus.cpp
CppStringPlus/test/: CMakeLists.txt
CppStringPlus/test/src/: CppStringPlusTests.cpp
SystemPort/: CMakeLists.txt  README.md
SystemPort/include/SystemPort/: Clipboard.hpp  CryptoRandom.hpp  DiagnosticsContext.hpp  DiagnosticsSender.hpp  DiagnosticsStreamReporter.hpp  DynamicLibrary.hpp  File.hpp  IFile.hpp  INetworkConnection.hpp  NetworkConnection.hpp  NetworkEndpoint.hpp  Service.hpp  StringFile.hpp  Subprocess.hpp  Time.hpp
SystemPort/src/: DataQueue.cpp  DataQueue.hpp  DiagnosticsContext.cpp  DiagnosticsSender.cpp  DiagnosticsStreamReporter.cpp  File.cpp  FileImpl.hpp  NetworkConnection.cpp  NetworkConnectionImpl.hpp  NetworkEndpoint.cpp  NetworkEndpointImpl.hpp  StringFile.cpp  SubprocessInternal.hpp
SystemPort/src/Linux/: DynamicLibraryLinux.cpp  FileLinux.cpp  SubprocessLinux.cpp  TimeLinux.cpp
SystemPort/src/Mac/: ClipboardMac.mm  DynamicLibraryMac.cpp  FileMac.cpp  SubprocessMac.cpp  TimeMac.cpp
SystemPort/src/Posix/: CryptoRandomPosix.cpp  DynamicLibraryImpl.hpp  DynamicLibraryPosix.cpp  FilePosix.cpp  FilePosix.hpp  NetworkConnectionPosix.cpp  NetworkConnectionPosix.hpp  NetworkEndpointPosix.cpp  NetworkEndpointPosix.hpp  PipeSignal.cpp  PipeSignal.hpp  SubprocessPosix.cpp  TimePosix.cpp
SystemPort/test/: CMakeLists.txt
SystemPort/test/MockDynamicLibrary/: CMakeLists.txt
SystemPort/test/MockDynamicLibrary/src/: MockDynamicLibrary.cpp
SystemPort/test/src/: CryptoRandomTests.cpp  DataQueueTests.cpp  DiagnosticsContextTests.cpp  DiagnosticsSenderTests.cpp  DiagnosticsStreamReporterTests.cpp  DynamicLibraryTests.cpp  FileTests.cpp  NetworkConnectionTests.cpp  NetworkEndpointTests.cpp  StringFileTests.cpp
doc/: protocol.txt
network/: CMakeLists.txt  client.cc
protocol/: CMakeLists.txt
protocol/include/protocol/: Auth.hpp  Buffer.hpp  Common.hpp  Eof.hpp  Field.hpp  Greeting.hpp  Ok.hpp  Type.hpp  mysql_common.h
protocol/src/: Auth.cpp  Buffer.cpp  Eof.cpp  Err.cpp  Field.cpp  Greeting.cpp  Ok.cpp
protocol/test/: CMakeLists.txt
protocol/test/src/: ProtocolTests.cpp
scripts/: vs.txt
src/: main.cpp
src/database/: database.cpp  dbms.cpp  dbms.h
src/parser/: execute.cpp  parser.cpp  sql.y
src/table/: table.cpp
testsql/: test1.sql  test_check.sql  test_date.sql  test_default.sql  test_foreign.sql  test_link.sql  test_link3.sql  test_null.sql  test_primary.sql  test_unique.sql
